[gd_scene load_steps=16 format=3 uid="uid://4fyoq8npekf0"]

[ext_resource type="Script" path="res://scenes/gameplay/world.gd" id="1_li0ht"]
[ext_resource type="Resource" uid="uid://c3hm2e8euscc1" path="res://scenes/powerups/slow_time_powerup.tres" id="2_52a6m"]
[ext_resource type="PackedScene" uid="uid://barl4q1kugrmm" path="res://scenes/gameplay/pause-layer/pause-layer.tscn" id="2_mk7kn"]
[ext_resource type="Texture2D" uid="uid://byg2ihb05tf4" path="res://assets/og_background_pic.png" id="3_6lnso"]
[ext_resource type="Resource" uid="uid://kcnotr5g6npm" path="res://scenes/powerups/screen_blast_powerup.tres" id="3_o14jb"]
[ext_resource type="PackedScene" uid="uid://b3mf65fcnvmvu" path="res://scenes/characters/player.tscn" id="3_vhnxw"]
[ext_resource type="Resource" uid="uid://dsp1inl6s1qal" path="res://scenes/powerups/heal_powerup.tres" id="4_hp0xe"]
[ext_resource type="PackedScene" uid="uid://byks0f5xqnv20" path="res://scenes/tree.tscn" id="4_l562g"]
[ext_resource type="Script" path="res://scenes/saver_loader.gd" id="5_m8xuy"]
[ext_resource type="PackedScene" uid="uid://cp7bdncv26bbl" path="res://scenes/characters/wbc.tscn" id="6_scc53"]
[ext_resource type="PackedScene" uid="uid://p3ijv0nq3035" path="res://scenes/menu/hud.tscn" id="6_vltvt"]
[ext_resource type="Script" path="res://scenes/gameplay/powerup_manager.gd" id="8_evt3o"]
[ext_resource type="PackedScene" uid="uid://cme2e7v3yy8ol" path="res://scenes/powerups/slow_time_powerup.tscn" id="8_k2l23"]
[ext_resource type="Script" path="res://scenes/gameplay/enemies_node.gd" id="9_4rtcf"]

[sub_resource type="Curve2D" id="Curve2D_xsefa"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -77, -43, 0, 0, 0, 0, 1221, -46, 0, 0, 0, 0, 1230, 676, 0, 0, 0, 0, -77, 676, 0, 0, 0, 0, -77, -43)
}
point_count = 5

[node name="World" type="Node2D"]
script = ExtResource("1_li0ht")
powerups = Array[Resource("res://scenes/powerups/powerup.gd")]([ExtResource("2_52a6m"), ExtResource("3_o14jb"), ExtResource("4_hp0xe")])

[node name="PauseLayer" parent="." instance=ExtResource("2_mk7kn")]
layer = 20

[node name="HUD" parent="." instance=ExtResource("6_vltvt")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="BackgroundRect" type="TextureRect" parent="CanvasLayer"]
modulate = Color(0.364706, 0.364706, 0.364706, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_6lnso")

[node name="Player" parent="." instance=ExtResource("3_vhnxw")]
position = Vector2(581, 323)
collision_layer = 3

[node name="OutOfViewPath" type="Path2D" parent="Player"]
position = Vector2(-581, -323)
curve = SubResource("Curve2D_xsefa")

[node name="OutOfViewSpawnLocation" type="PathFollow2D" parent="Player/OutOfViewPath"]
unique_name_in_owner = true
position = Vector2(-77, -43)
rotation = -0.00231124

[node name="EnemiesNode" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("9_4rtcf")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="EnemiesNode"]

[node name="PowerupsNode" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("8_evt3o")

[node name="EnemySpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
autostart = true

[node name="PowerupSpawnTimer" type="Timer" parent="."]
wait_time = 25.0
autostart = true

[node name="Tree" parent="." instance=ExtResource("4_l562g")]
position = Vector2(1002, 52)

[node name="Tree2" parent="." instance=ExtResource("4_l562g")]
position = Vector2(226, 469)

[node name="Tree3" parent="." instance=ExtResource("4_l562g")]
position = Vector2(227, 65)

[node name="Tree4" parent="." instance=ExtResource("4_l562g")]
position = Vector2(903, 424)

[node name="SaverLoader" type="Node" parent="."]
script = ExtResource("5_m8xuy")

[node name="WBC" parent="." instance=ExtResource("6_scc53")]
collision_mask = 4

[node name="SlowTimePowerup" parent="." instance=ExtResource("8_k2l23")]
position = Vector2(309, 223)
collision_layer = 0
collision_mask = 2

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="PowerupSpawnTimer" to="." method="_on_powerup_spawn_timer_timeout"]
